Fix - exception and decimal vs float

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,41 @@
-yfinance
-
-lxml
-
-requests
-
-django
-
-jsonfield
-
-pytest
-pytest-django
-
-mysqlclient
-
-bdateutil
-
-gunicorn
-
-django-heroku
-
-cachetools
+asgiref==3.3.1
+attrs==20.3.0
+bdateutil==0.1
+cachetools==4.2.0
+certifi==2020.12.5
+chardet==3.0.4
+convertdate==2.2.0
+dj-database-url==0.5.0
+Django==3.1.4
+django-heroku==0.3.1
+gunicorn==20.0.4
+holidays==0.10.4
+idna==2.10
+importlib-metadata==3.1.1
+iniconfig==1.1.1
+jsonfield==3.1.0
+korean-lunar-calendar==0.2.1
+lxml==4.6.2
+multitasking==0.0.9
+mysqlclient==2.0.2
+numpy==1.19.4
+packaging==20.7
+pandas==1.1.5
+pluggy==0.13.1
+#psycopg2==2.8.6
+py==1.9.0
+PyMeeus==0.3.7
+pyparsing==2.4.7
+pytest==6.1.2
+pytest-django==4.1.0
+python-dateutil==2.2
+pytz==2020.4
+requests==2.25.0
+six==1.15.0
+sqlparse==0.4.1
+toml==0.10.2
+urllib3==1.26.2
+whitenoise==5.2.0
+yfinance==0.1.55
+zipp==3.4.0
+pip==20.1.1
